<resources>
    <string name="app_name">YiFu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="account_number">账号</string>
    <string name="input_account_number">请输入手机号码</string>
    <string name="account_pwd">密码</string>
    <string name="input_account_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="exit_login">退出登录</string>
    <string name="register">新用户注册</string>

</resources>
