<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ececed"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">


        <EditText
            android:id="@+id/account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_ffffff"
            android:digits="1234567890"
            android:drawableLeft="@mipmap/login_icon_phone"
            android:drawablePadding="10dp"
            android:hint="@string/input_account_number"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="15dp"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/account_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white_ffffff"
            android:drawableLeft="@mipmap/login_icon_pw"
            android:drawablePadding="10dp"
            android:hint="@string/input_account_pwd"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="15dp"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="15dp"
            android:text="@string/forget_pwd"
            android:textSize="17dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_but"
            android:text="@string/login"
            android:textColor="@color/white_ffffff"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/remember_pwd"
                android:textSize="15dp"
                android:textStyle="bold" />

            <com.psylife.wrmvplibrary.widget.SwitchView
                android:id="@+id/remember_pwd"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/register_but"
            android:text="@string/register"
            android:textColor="#7d7d7d"
            android:textSize="17dp" />
    </RelativeLayout>
</LinearLayout>
